Added getting data for metrics and histogram, now they display correctly. Changed the format of dates, showing in the web page

--- a/reacttut/webtable/src/App.css
+++ b/reacttut/webtable/src/App.css
@@ -1,9 +1,3 @@
-.container__metric {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-p {
-    margin-right: 20px;
+body{
+    background-color: rgb(238, 238, 238);
 }
